# PtouchPrintSender

./: .gitattributes  .gitignore  ADDRESS.tsv  ADDRESS.tsv.BAK  Application.cs  BrotherPrinterDocument.cs  Cargo.toml  ConfigurationManager.cs  MyLogger.cs  Program.cs  PtouchPrintSender.csproj  PtouchPrintSender.sln  README.md  StringUtility.cs  make-print.bat  make.bat  print.bat  run.bat  宛名.lbx
.github/workflows/: dotnet-desktop.yml
Properties/: AssemblyInfo.cs
PtouchPrintSenderApp/: Application.cs  MyLogger.cs  StringUtility.cs
cli/: main.rs
cli/application/: mod.rs
cli/util/: mod.rs
