[package]
name = "ptouch-print-sender-build-cli"
version = "0.1.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ptouch-print-sender-build-cli"
path = "cli/main.rs"

[dependencies]
chrono = "*"
